--- a/app/globals.scss
+++ b/app/globals.scss
@@ -19,3 +19,22 @@ a{
     color: inherit;
     text-decoration: none;
 }
+
+.home {
+    width: 100%;
+   margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.link {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin-top: 35px;
+    font-size: .7rem;
+    font-weight: 500;
+}
