--- a/app/components/Login/styles.module.scss
+++ b/app/components/Login/styles.module.scss
@@ -1,9 +1,14 @@
 .login {
+ 
     &_container {
         width: 100%;
         height: 100vh;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    &_text {
+        margin-top: 20px;
     }
 }
